@@ -3,12 +3,12 @@ Priority: optional
 Section: python
 Maintainer: Nicolas Noirbent <nicolas@noirbent.fr>
 Uploaders: Nicolas Noirbent <nicolas.noirbent@smartjog.com>
-Build-Depends: cdbs (>= 0.4.89), debhelper (>= 7), python-support (>= 0.8)
+Build-Depends: cdbs (>= 0.4.89), debhelper (>= 7), python-support (>= 0.8), python-dev
 Standards-Version: 3.9.2
 XS-Python-Version: >= 2.6
 
 Package: savate
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}, python-cyhttp11, python-daemon
 Provides: ${python:Provides}
 Breaks: ${python:Breaks}
